--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <tr><td>27/06</td><td>Unidade 3 (Gráficos)</td></tr>
         <tr><td>04/07</td><td>Unidade 4 (Bases de Dados e CSV)</td></tr>
         <tr><td>11/07</td><td>Unidade 5 (Estatística Descritiva)</td></tr>
-        <tr><td>18/07</td><td>📌 Prova</td></tr>      
+        <tr><td>18/07</td><td>Unidade 5 (Estatística Descritiva) </br> Unidade 6 (Correlação e Regressão)</td></tr>      
         <tr><td>25/07</td><td>Unidade 6 (Correlação e Regressão)</td></tr>
         <tr><td>01/08</td><td>Unidade 6 (Correlação e Regressão)</td></tr>
         <tr><td>08/08</td><td>Unidade 7 (Condicionais)</td></tr>
@@ -210,7 +210,7 @@
     <div class="subtitulo"><h2>Avaliações e Cálculos</h></div>
     <p><strong>📊 Cálculo da Nota Final:</strong></p>
     <ul class="indentada">
-  	<li><strong>Nota Final</strong> = 35% Prova (Individual) + 50% Mini-projeto (Dupla) + 15% EPs (Individuais) </li>
+  	<li><strong>Nota Final</strong> = 40% Mini-projeto #A (Individual) + 55% Mini-projeto #B (Dupla) + 5% EPs (Individuais) </li>
     </ul>
     <p><strong>📈 Critério de Conversão para Conceito Final:</strong></p>
     <table class="grade-table">
