--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <div class="atendimento-box">
     Prof. João Marelo Borovina Josko <br> 
     📧 marcelo.josko@ufabc.edu.br <br><br>
-    📅 Atendimento Dúvidas <br> Sexta-feira - 14h às 15h <br>
+    📅 Atendimento Dúvidas <br> Sexta-feira - 14h às 16h <br>
     Sala 520 - Torre 2 - Bloco A
   </div>
 
@@ -233,6 +233,10 @@
   	<li>Discentes que NÃO REPROVARAM por falta</li>
 	<li>Discentes que obteram Conceito Final <strong>D ou F</strong></li>
 	<li>Cobre todo o conteúdo do curso</li>
+    </ul>
+    <p><strong>📊 Cálculo do Conceito Final - Pós-REC:</strong></p>
+    <ul class="indentada">
+  	<li><strong>Nota Final</strong> = 60% Nota Final + 40% REC </li>
     </ul>
   </div>
 
